[package]
name = "spotimy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librespot-core = "0.4.2"
librespot-playback = { version = "0.4.2", features = ["pulseaudio-backend"] }
rspotify = { version = "0.12.0", features = ["env-file", "cli"] }
tokio = { version = "1.32.0", features = ["full"] }
